--- a/weblate/templates/search.html
+++ b/weblate/templates/search.html
@@ -19,6 +19,9 @@
         {% crispy search_form  %}
     </form>
     {% if page_obj.object_list %}
+        <div class="search-summary">
+          <p>{{ total_strings }} {% trans "strings" %} / {{ total_words }} {% trans "words" %}</p>
+        </div>
         {% include "snippets/embed-units.html" with units=page_obj.object_list hide_context=True include_search=True force_source=True show_translation=True %}
         {% include "paginator.html" %}
     {% else %}
