--- a/weblate/static/styles/variables.css
+++ b/weblate/static/styles/variables.css
@@ -6,10 +6,10 @@
 
 /* See style-dark.css for the dark versions */
 :root {
-  --border-radius-sm: 2px;
-  --border-radius: 4px;
-  --border-radius-lg: 10px;
+  --border-radius-sm: 4px;
+  --border-radius: 10px;
+  --border-radius-lg: 14px;
   --border-radius-xl: 20px;
 
-  --border: 1px solid #f2dede;
+  --border: 1px solid #e9eaec;
 }
