--- a/weblate/templates/snippets/position-field.html
+++ b/weblate/templates/snippets/position-field.html
@@ -6,7 +6,10 @@
   {% if not is_zen %}
     {% if prev_unit_url %}
       <a id="button-first" class="btn btn-default green" href="{{ first_unit_url }}" title="{% trans "First" %}">{% if LANGUAGE_BIDI %}{% icon "page-last.svg" %}{% else %}{% icon "page-first.svg" %}{% endif %}</a>
-      <a id="button-prev" class="btn btn-default green" href="{{ prev_unit_url }}" title="{% trans "Previous" %}" rel="prev">{% if LANGUAGE_BIDI %}{% icon "page-next.svg" %}{% else %}{% icon "page-previous.svg" %}{% endif %}</a>
+      {% if not is_in_browse %}
+        <a id="prev-section" class="btn btn-default green {% if offset < 2 %} disabled {% endif %}" href="{{ prev_section_url }}" title="{% trans "Previous section" %}">{% if LANGUAGE_BIDI %}{% icon "fast-forward.svg" %}{% else %}{% icon "rewind.svg" %}{% endif %}</a>
+      {% endif %}
+       <a id="button-prev" class="btn btn-default green" href="{{ prev_unit_url }}" title="{% trans "Previous" %}" rel="prev">{% if LANGUAGE_BIDI %}{% icon "page-next.svg" %}{% else %}{% icon "page-previous.svg" %}{% endif %}</a>
     {% else %}
       <a id="button-first" class="btn btn-default green disabled" title="{% trans "First" %}">{% if LANGUAGE_BIDI %}{% icon "page-last.svg" %}{% else %}{% icon "page-first.svg" %}{% endif %}</a>
       <a id="button-prev" class="btn btn-default green disabled" title="{% trans "Previous" %}">{% if LANGUAGE_BIDI %}{% icon "page-next.svg" %}{% else %}{% icon "page-previous.svg" %}{% endif %}</a>
@@ -28,6 +31,9 @@
   {% if not is_zen %}
     {% if next_unit_url %}
       <a id="button-next" class="btn btn-default green" href="{{ next_unit_url }}" title="{% trans "Next" %}" rel="next">{% if not LANGUAGE_BIDI %}{% icon "page-next.svg" %}{% else %}{% icon "page-previous.svg" %}{% endif %}</a>
+      {% if not is_in_browse %}
+        <a id="next-section" class="btn btn-default green {% if not can_go_next_section %} disabled {% endif %}" href="{{ next_section_url }}" title="{% trans "Next section" %}" rel="next">{% if not LANGUAGE_BIDI %}{% icon "fast-forward.svg" %}{% else %}{% icon "rewind.svg" %}{% endif %}</a>
+      {% endif %}
       <a id="button-end" class="btn btn-default green" href="{{ last_unit_url }}" title="{% trans "Last" %}">{% if not LANGUAGE_BIDI %}{% icon "page-last.svg" %}{% else %}{% icon "page-first.svg" %}{% endif %}</a>
     {% else %}
       <a id="button-next" class="btn btn-default green disabled" title="{% trans "Next" %}">{% if not LANGUAGE_BIDI %}{% icon "page-next.svg" %}{% else %}{% icon "page-previous.svg" %}{% endif %}</a>
