--- a/weblate/templates/configuration/custom.css
+++ b/weblate/templates/configuration/custom.css
@@ -83,7 +83,7 @@ body[data-theme="dark"] {
   color: var(--header-text-color);
 }
 .navbar a path {
-  fill: var(--navi-text-color);
+  fill:var(--header-text-color);
 }
 {% endif %}
 {% if navi_color_light %}
