--- a/weblate/templates/addons/addon_logs.html
+++ b/weblate/templates/addons/addon_logs.html
@@ -39,7 +39,7 @@
         {% for log in addon_activity_log %}
           <tr>
             <td>
-              {% if log.details.error_occured %}
+              {% if log.details.error_occurred %}
                 <!-- This is a warning sign -->
                 <span class="text-danger">⚠</span>
               {% else %}
